# ROS2_airobotcel

./: .gitignore  README.md  main_test.py
.cache/depthai/telemetry/: tmpIds.json
.cache/depthai/telemetry/019ef8bf-f7a8-734d-a980-b39a0fa2b864/: 00000001782289853976_7392c76c-5675-4c1b-abcf-24e5bad579d0.json  (+1 more)
ai_vision/: package.xml  setup.cfg  setup.py
ai_vision/ai_vision/: vision_node.py
ai_vision/launch/: vision.launch.py
airobot_interfaces/: CMakeLists.txt  package.xml
airobot_interfaces/action/: AutoSort.action  SortSpec.action
controller/: package.xml  setup.py
controller/controller/: main.py  main_test.py  mainreserve.py
coordinate_transform/coordinate_transform/: coordinate_transform_node.py
hmi_unit/: package.xml  setup.cfg  setup.py
hmi_unit/hmi_unit/: hmi_bridge.py  hmi_gui.py  main.py
hmi_unit/test/: test1.py  test2.py  test3.py  test4.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
interfaces/: CMakeLists.txt  package.xml
interfaces/action/: .test  AutoSort.action  GoHome.action  ManipulatorTask.action
interfaces/msg/: .test
interfaces/srv/: .test  CoordRef.srv  CoordRobot.srv
log/: latest_build
manipulator_unit/: README.md  licence.md  package.xml  setup.cfg  setup.py
manipulator_unit/chess/: install.txt  package.xml  setup.cfg  setup.py
manipulator_unit/chess/chess/: chess.py
manipulator_unit/documentation/: conf.py  index.rst
manipulator_unit/documentation/documentation/: demo_programms.md  faq.md  gripper.md  install.md  migrating.md  overview.md  real_robot.md  ros_support.md  setup_assistant.md  simulation.md  teachbot.md  troubleshooting.md  virtual_environment.md
manipulator_unit/manipulator_unit/: GoHome.py  Robot.py  demo.py  pick_place.py  reserve.py
manipulator_unit/movit_config/: .setup_assistant  CMakeLists.txt  package.xml
manipulator_unit/movit_config/config/: kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  uf_robot.srdf  uf_robot.urdf.xacro
manipulator_unit/movit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
manipulator_unit/my_uf/: package.xml
manipulator_unit/my_uf_bringup/: setup.cfg
manipulator_unit/my_uf_bringup/config/: xarm_api_params.yaml
manipulator_unit/my_uf_bringup/launch/: fake_robot.launch.py  movegroup.launch.py  real_robot.launch.py
manipulator_unit/my_uf_bringup/rviz/: environment.rviz  moveit.rviz
manipulator_unit/my_uf_demo/: package.xml  setup.py
manipulator_unit/my_uf_demo/my_uf_demo/: demo.py
manipulator_unit/my_uf_demo_cpp/: CMakeLists.txt  package.xml
manipulator_unit/my_uf_demo_cpp/launch/: demo.launch.py
manipulator_unit/my_uf_demo_cpp/src/: demo.cpp
manipulator_unit/my_uf_description/: package.xml  setup.cfg  setup.py
manipulator_unit/my_uf_description/cfg/: view_robot.rviz
manipulator_unit/my_uf_description/launch/: view_environment.launch.py
manipulator_unit/my_uf_description/urdf/: reserve.urdf.xacro  uf_robot.urdf.xacro
manipulator_unit/my_uf_moveit_config/: .setup_assistant  package.xml
manipulator_unit/my_uf_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  uf_robot.srdf  uf_robot.urdf.xacro
manipulator_unit/my_uf_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
manipulator_unit/urdf/: houder_bakjes.STL  uf_robot.urdf.xacro
my_uf/: CMakeLists.txt
my_uf_bringup/: package.xml  setup.py
my_uf_bringup/launch/: real_robot.launch.py  simulation.launch.py  view_environment.launch.py
my_uf_bringup/worlds/: empty_world.world
my_uf_description/: setup.py
my_uf_description/urdf/: uf_robot.urdf.xacro
my_uf_moveit_config/: CMakeLists.txt
my_uf_moveit_config/config/: kinematics.yaml
my_uf_moveit_config/config/backup/: lite6_robot.srdf
my_uf_moveit_config/launch/: rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
positie_transformatie/: package.xml  setup.cfg  setup.py
robotcel_bringup/: setup.py
robotcel_bringup/launch/: robotcel.launch.py
scripts/: restart_robotcel.sh
src/AI_vision/install/: local_setup.sh  setup.sh
src/AI_vision/log/: latest_build
src/HMI_unit/install/: local_setup.sh  setup.sh
src/HMI_unit/log/: latest_build
src/ai_vision/: CMakeLists.txt  package.xml
src/hmi_unit/: setup.py
src/manipulator_unit/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/manipulator_unit/log/: latest_build
src/robotcel_bringup/: package.xml  setup.cfg  setup.py
src/voice_control/: CMakeLists.txt  setup.py
src/voice_control/install/: local_setup.sh  setup.bash  setup.sh
src/voice_control/log/: latest_build
transformatie_pakket/: package.xml  setup.cfg  setup.py
transformatie_pakket/transformatie_pakket/: __init__.py  positie_transformatie.py
voice_control/: package.xml  setup.py
voice_control/arduino/voice_command_mapper_group_esp32/: voice_command_mapper_group_esp32.ino
voice_control/voice_control/: voice_node.py
voice_control3/: CMakeLists.txt  package.xml
voice_control_stijn/: package.xml  setup.cfg
(+218 files in other folders)
